[gd_scene load_steps=2 format=3 uid="uid://bk8n7jxmpt2os"]

[ext_resource type="Script" path="res://assets/main_menu/menus.gd" id="1_0e51p"]

[node name="Menus" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0e51p")

[node name="main_menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -20.0
offset_right = 156.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="play" type="Button" parent="main_menu"]
layout_mode = 2
text = "play
"

[node name="start_menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -20.0
offset_right = 156.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="continue_" type="Button" parent="start_menu"]
layout_mode = 2
text = "continue
"

[node name="new_game" type="Button" parent="start_menu"]
layout_mode = 2
text = "new game
"

[node name="configurations" type="Button" parent="start_menu"]
layout_mode = 2
text = "configurations
"

[node name="exit" type="Button" parent="start_menu"]
layout_mode = 2
text = "exit
"

[connection signal="pressed" from="main_menu/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="start_menu/continue_" to="." method="_on_continue__pressed"]
[connection signal="pressed" from="start_menu/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="start_menu/configurations" to="." method="_on_configurations_pressed"]
[connection signal="pressed" from="start_menu/exit" to="." method="_on_exit_pressed"]
